--- a/calendar.html
+++ b/calendar.html
@@ -22,44 +22,43 @@
                         silkscreen printing</p>
                 </a>
             </div>
-            <div class="objects">
-                
-                <div class="one object ob">
+            <div class="frame">
+                <div class="one-mobile object">
                     <img src="./dlya_kal_dlya_tel.png">
                 </div>
-                <div class="one1 object rr">
+                <div class="one-computer object">
                     <img src="./kal.jpg">
                 </div>
-                <div class="two object ob rr">
-                    <img src="https://s3-alpha-sig.figma.com/img/f583/5c54/4e2af43350bec07d75b4ff84d0ed57d9?Expires=1712534400&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=UNRl2Ruj4XKOvE14BO5ze8LyeqiFFJIEiG0pH372F7b-8Ap3BCTRZdqVPI4tPQGSP4cjyjPhH7wl-CKMMmsbf8r9WTTlCUH-J3-MLFp4X09jSVdjFQLpul9xWf~ufpirBcRjYn3mWdyI2g8tve5AFKJPpELhIXrn0uY-j8Jg~7kxS3KJ-c8c81nKy2VFjcHS7idfwNb-L8xooksgBBd-2Zo5TmoT27UTd9Ugt-3lHMG44HUn7OBiY9vE5P4J2SmTHq-HEQB3TJ5yI~5cZwl92iQhHesr4UhMNoVeVRBUkWPWCGc-0RvBnl8MRXcB7eg~D-hybNxbkadII3EP7A-4-w__">
+                <div class="two object">
+                    <img src="https://s3-alpha-sig.figma.com/img/f583/5c54/4e2af43350bec07d75b4ff84d0ed57d9?Expires=1713744000&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=WENCEug7jbS8tvR6YisoQ6XKPbW6dj7pqJZXMA9e9eddu5LA~KU2Ad0vLKKnbed2hS5w6QlWE8iX0-aQJ-dNDgmcyHFh~Sg0cDgFmQHTyWFJeonEqQZoyItzGbuVXSTAoyXUhKyaCoSld-c1lqLyUeC1hxooJCJI3nwqhaflWyHD5vMaChARpAl-iLto~D4gDWByMqay3QWBmvGbi0qFgyKeOFVd0Rq~tR7iSGeCOdYvjS2mWvPWfO9U~FVO2R8ip6FalQzKKE43fYKRvdUpsKstDzWQxNHFHFyAzcdTbafKYhOTboA4mg1eO2Ub-z72LG4XgFRhECago2Hveeqz2g__">
                 </div>
-                <div class="three object ob">
-                    <img src="https://s3-alpha-sig.figma.com/img/09cd/b421/3c515ce16f55feb5ae61f976466c1832?Expires=1712534400&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=Bpux4Ci0-OxafEeAhxuaFiGZ54KNs0xlTnzDhgAm8UbvL0IVNmd6KR5zrEUl8Icqgtc1AMqJgv-WpME~gk4EwDnxNceT1bjpyEo81zFC1Yh8lMCPFclQWSadFaleeWeNea5ZD9XmDrh7t86-3i1YS8UJ7xOSiTthi1tY8bZAQ6MBzF7nXsqW0o30Dw-AIN1aNuD4aBY-lvTFhBhBHs5KxEm26GVHzoU4aMlSNvdr6mQqlnSffkN2WJ8Asjr6VrFOOxE6sTzmZsTUHQgDFya-svxCvP8o~-HDfa5KnT-7GHY1ZUC7UuQHyvf1IwBpTeCJko8kTwRv6eWB-lzPUe3KnA__">
+                <div class="three-mobile object">
+                    <img src="https://s3-alpha-sig.figma.com/img/d92b/f95e/2cccfc682581ff84e8f5cf53468d471e?Expires=1713744000&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=SlS6F2nS4QZLzm~s7t6pNQ0QG6XIjJg3LWa9YKc5GAZXjmn8an-zTOPxXIRFpnyfugubsgOMAqG3E9IIoOiJh0omBVZvMFw7BKdhPrviNq9NUKTxJ9~CyPgirEB6EnbivQFpkMtQKVOgsoDrb6opu3kmFRKuQE92beo1G9BfylPjA5Fb~VwoEQaFc403aTxEEVc~pnebYhx--GNaj6~AT~y~HqdqawlRnU2AzGh9GKUMZYE-Yt34Ks0t~Z00Nnt2zemT7fph~mDhnvcLKNempAkHKiJHCMkjx-c-ts41o-NSDzKmAUUQn7R8a0jrgv7YhCD1Kw1aD2GB7m6SsX-QWQ__">
                 </div>
-                <div class="three1 object rr">
-                    <img src="https://s3-alpha-sig.figma.com/img/0fc0/79e6/06c200076f937f6b70367831d0d4482d?Expires=1712534400&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=GDC3zq2U4KfwWqIN-QLlqWbuMtYAxZtqy2bynipqw9TawYPA3vwUVi1K~LvJWVe5OPkr0MvJstnyy8QR7ROHsVmxpFQaDXWUj3tl88yRw6jZhC4lGIAKEaVzT1tjxPxqhNUxVOXrz9AdLmdidoye2CmWpqKpod-yMldtzkl65ktKg04NMr3GvxLuAJQRKCt2lHPxsdnUlWJxaMX8weLMKUH-2xb4hsN0NcSa~KndeUmLle4hyiI5DzeENx0qG6oD9IY1FBwNTZJxb~PVFAUsnHT0Oliy8QFStuviW1OrmyWLkCMjJrYAEy-bX-YJXCKxS7oUoKouIVvDd8ZsROWVTQ__">
+                <div class="three-computer object">
+                    <img src="https://s3-alpha-sig.figma.com/img/d92b/f95e/2cccfc682581ff84e8f5cf53468d471e?Expires=1713744000&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=SlS6F2nS4QZLzm~s7t6pNQ0QG6XIjJg3LWa9YKc5GAZXjmn8an-zTOPxXIRFpnyfugubsgOMAqG3E9IIoOiJh0omBVZvMFw7BKdhPrviNq9NUKTxJ9~CyPgirEB6EnbivQFpkMtQKVOgsoDrb6opu3kmFRKuQE92beo1G9BfylPjA5Fb~VwoEQaFc403aTxEEVc~pnebYhx--GNaj6~AT~y~HqdqawlRnU2AzGh9GKUMZYE-Yt34Ks0t~Z00Nnt2zemT7fph~mDhnvcLKNempAkHKiJHCMkjx-c-ts41o-NSDzKmAUUQn7R8a0jrgv7YhCD1Kw1aD2GB7m6SsX-QWQ__">
                 </div>
-                <div class="four object ob rr">
-                    <img src="https://s3-alpha-sig.figma.com/img/c412/a7e0/d08c18ea80d7d8b89cded9ce285d5591?Expires=1712534400&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=WruESoTUC3cN1dTgj0OevhVHUBBZTnjrI1kmgen1tP1~GVE3eWkLPTzTkr-8L8rgudvKwu-~qeP-EgqVcljB317XSxJFn782WFejMsIBFZ8jOmLE7gZ~ISCnDwKCYTKOLwXX0jw9jTcblV6cKZcltQGNiVfOHv51nh6ZlYWBqCztguMMdkdp6EIugx1e~8~Tk80kLiZ-rJnv1qu2tVmJeaStQSVc3fnLB8DvpTv5jGp5OiQDVERydy362w8FX2UjWt5PVWbp~icaFQO9C8mVTW0S64R3XRC8TV~YosqJgeWctVq7pnympIr1MdzcJ3gSNYBn7BU0DiXprwQNnfKOlQ__">
+                <div class="four object">
+                    <img src="https://s3-alpha-sig.figma.com/img/c412/a7e0/d08c18ea80d7d8b89cded9ce285d5591?Expires=1713744000&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=gXjEa950PlWKWVXBgsap0OpuxS8qLzQnQmfLy6hoW~aMuVWe5CtDcF3wq9AqKVfqdtCrgH0KmbIeJNZw2nAW7CmcuzhNA5~FzQMxCISL~N-EjGIGDfgzwICbZvH3oQAr-7GsTl~8vmFLZI~Jqo7QXomXUQ21f2JsKnK1ZvWfCMzAQLDpPlemrr3YN~e3YnrN-TTUwN6jdpwvNqEK7sDR3Wi~YTLD2u0h0o53iz0aDTDM0hvcxG-1ne96tzJNeLzeVT1X82yihASg9VxjaioCHvzmT1O3iTstMGMyQmK2Zd6DvCvy9sTYS-fV6g2TSd4mGsFOuqlOMfBuPaOnB9f9oQ__">
                 </div>
-                <div class="five object ob rr">
-                    <img src="https://s3-alpha-sig.figma.com/img/17eb/6a7e/e154f91c933fc209ed0f6b6d1975b139?Expires=1712534400&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=S0pqSZ8os1QyGSo5FLvXnt71-fWs1jRFMnpmBQMmbCrbzuJXvRLWpixSJJACSqt8gvlBF560rELTOY3Egvimd-49~PIohHxdrnbz24Fm88toQp2VXfijDk4jVI~Ysw-W5OC2JL5YdG3To1zSRAgrSQvuR4G7uMXMJk8aMtQuAbMMTCV5Tm6vHcbt1kro8DnCiyLW3dR7FYOh6chMbv--9XO6J7~epicMMRNGvganyxHGPctTXaAokZnccq45xZHrvtyXMHpIb9uDVSQn4EsETvkUp0CFqY1T4FsU5WpsK60v9ZBwlcp9FdNwPF8fP4-ytam4Xg-HV01dAht3cJ9vEA__">
+                <div class="five object">
+                    <img src="https://s3-alpha-sig.figma.com/img/17eb/6a7e/e154f91c933fc209ed0f6b6d1975b139?Expires=1713744000&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=IXNus0nhFJLMvWIiXqIBLSgtPO8ATKm-4xWLN37HA2TBJvv-X7idw7rbx0pzPKZHtZdwKwd5r1tocXYoWf~OV0i2b7WTLJdTfpDCqSDHQHiUqUN5LI6v9ZzI~0auPj6ZF98kn6oPePRW1ZWAYiosQUrrLpQ5iy0RdQSxnzwjftJ70HWMWKCDZoGLKUByvJsAZdVXKbJJpZH-JlDB59S9iM9n~siQYXQsJDlxfJ289zIqFaYPhSHG-DfVwd1RDhGyZ3u5J8sWvRzgyD7~xU46jPfIWP8jC~d8VVhoCnF3qmOXriiiww2Cwhz8zo8hpk7DfFQhrcPFCjy27eU3GVO5zg__">
                 </div>
-                <div class="six object ob">
+                <div class="six-mobile object">
                     <img src="https://s3-alpha-sig.figma.com/img/95ce/d777/60a08ac21b2dfb3f0cdf8f69afd6c7db?Expires=1712534400&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=FTIMs0tQsORUF9v~fLavK3Gw4YY93TGfmfONwKw49SmetBq70YszjJQUTgp45jaRFdcC-aadkMg9B0OCiUeLfppW59W~eShoXFvw5AQ~3FZJRZ2i0eLBq8WHQab~YFSIGLCZLGC7Q~3gAeTFw79Aj-9bUW40k1xUfMRc~IpbcwCAuqYPGZQDWQGnt-wc4iBVX4u60KMQNY7Mb83yjpWKS56GoFsjydoIi52Lp~w3O3~u6WDx63dDYNZhXdf9zQ9efxGnOfIc6U76swOHhvOYauyfjIK3OM66IwoLOHJjSIRBA0MUiciKYzLT04~jRZ6VbgRSrMg2pNhMSbdsCC~6Eg__">
                 </div>
-                <div class="six1 object rr">
-                    <img src="https://s3-alpha-sig.figma.com/img/2f79/cc70/e3bb1c2162d60e381e79d1f3fab9ea33?Expires=1712534400&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=fElbCv7L1PH3CcYe1mURdqOptYWY4k8cdae6hVvE~PQNjxAPoV-VvOtbp~BicOF94keN1r6tKoQ1UpaWRkE7ycwIM2sOa91R9kxlC47VC46iqYJLZg7o3pO85Nq-FURjyYwaUwC2ALiHgskcKP0EnsbPQfAhF~PhbQPhPQbUGW0Rv~Lfg1pp4RBzB8l0o2um1lndGxmb0kB160cLTO1lR5nIE8r-w~pdvjackycxfJjj4kFAFV3ArytyuuPGHRORoa7x0tP~4OjPUNd~zdjZs-OZCEx0y4wsL5pNVkuH6oSMzZCC6FnDEY8XdKJhU7bXNOJY1v75Ljs1IHKz26Ixhw__">
+                <div class="six-computer object">
+                    <img src="https://s3-alpha-sig.figma.com/img/2f79/cc70/e3bb1c2162d60e381e79d1f3fab9ea33?Expires=1713744000&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=ifzhu~niwJcI1cU8pUux39aI~Gy1fs6E2TEXJ44tWZsD3zaPIHN4VAJVCEgKXMWIe7srrPIjAV1NXWUx2cBeXrFVGQz-3ywJNBxBu1tZJzb12yplHOcuvi1VJcJ71lNTOOGdX9bqpcAcfuV-bjXI-Xm3qs~siX24uWx15m7Z4PKBQ5BVKrPMij57VztoWB~2TCzreZT~Yx8PLDN4VEdDbkbL5mVb2Fl65w~MrsRr8edrmFVpZL03~PprkOx5X7C7diVZzJTFeSWWMupIHvh1MXjubwLKpM-lVL-drq-hlLz-nEJueiascqPZ8~4AOS~nmXk-rtP9iJOLmxbiFwTorw__">
                 </div>
-                <div class="seven object ob rr">
-                    <img src="https://s3-alpha-sig.figma.com/img/433c/fe11/f990464ea99471ecbfa4fd09f51c891d?Expires=1712534400&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=nmoxHlv5Vh0BI9tgueDcaO6EdTpGxcQgx1woVWG8hxirdXzjgJqYhpXlM3UkMEEVJ3lIAPwG58VGrRzmdo2pEA~oPiIWJYB4BWBVBmW2tdlFb6Ov2AFUl5qp4H~vhgt~BlN36SkD38vcixBrTDgO6GqqU8SpymcAsfx0~1YFU-o8HdTrEHqsgY7n2-L2YNHY-Jr0ePTGt-s11nUGZzfxe1Q7W-6bd2~8u87xZ4CSiC8p~Dqza-dJkKFznknM6axIAroW9YU1LrgW5qtcACjdOuV~Gzakd6JMMyBvJikEXKOy84amJr76VNGhleS6dK-ZTVlJCT1pbyPr6oxHIpfnKQ__">
+                <div class="seven object">
+                    <img src="https://s3-alpha-sig.figma.com/img/433c/fe11/f990464ea99471ecbfa4fd09f51c891d?Expires=1713744000&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=pxXnhSmtPwSWAXThnYjwGQwx3mFN5RLlCsApvMSe4BXHFQTpZhPbE3dMvjS8e~OOkyWbHHxeKJvXY5yNpYnomc7AX81lbdoelSl9iOEiW~oawBAOAUI231ET1bIRl981FPYWXML78Gjgd9d7R9iwOGYGezG5bI-4It8Qig494jxEUzQdR~UIKk-KKw3Riu3JtZwWyDR64sH5tC2gTmzFW41o-qdwz59VklwCAnXaWArRm6QL1qrknXm15K4pCrFhQ-YJmU13d-acMx6aKJkhGhrYOondAbqdwfXStG4YST4ko7xfCFyQFQOwvP6ZebxzIQpYyzojWbc57RIVgBkR1A__">
                 </div>
             </div>
-            <div class="video">
-                <a href="https://www.youtube.com/watch?v=pxClScJU5w8" class="about">
-                    <p>Video</p>
-                </a>
-            </div>
+        </div>
+        <div class="video">
+            <a href="https://www.youtube.com/watch?v=pxClScJU5w8" class="about">
+                <p>Video</p>
+            </a>
         </div>
     </main>
     <!---<script src="сайт для Сони.js"></script>--->
