--- a/index.html
+++ b/index.html
@@ -12,51 +12,81 @@
 </head>
 <body>
     <main>
+        
+        <div class="about1">
+            <a class="about">
+                <p>Sofia Khokhlova, student at HSE Art and 
+                Design School, Moscow (Russia).
+                Sofia.khohlova@yandex.ru., t.me/sonahoh,
+                instagram.com/soony.a</p>
+            </a>
+        </div>
         <div class="container">
-            <div class="about1">
-                <a class="about">
-                    <p>Sofia Khokhlova, student at HSE Art and 
-                    Design School, Moscow (Russia).
-                    Sofia.khohlova@yandex.ru., t.me/sonahoh,
-                    instagram.com/soony.a</p>
+            <div class="font-SITAL">
+                <a href="./sital.html" class="object">
+                    <img src="https://s3-alpha-sig.figma.com/img/12b5/a200/7676399526d5b3498a880715cc5e8720?Expires=1713744000&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=ac8ejq92QVvpf7ynq9meKZOyn9O60273FwRre0X9jY0gbOsQmmul~TPk1jcttffIsRMMnsZT4N7DPocfO88I5E9EgDtjAiezvGkR4B1UR9geTeLCBM28sdkGEEwhsEoBhwwOQ6CmW-W6u4spUYXfYg~rCBF2qPE8XZ9suuyumBotskXyAXkUfZ8DU~LmQeEeG-8DWSuVjv67nYn~fvW0BgEjnphnK-uw5y1kNJ4jXS2R-FdWSE64tvbniSworyhfKdTZh7w1~I5fMWe2mgr2Yhs6oToV7K9tzDbX3OoVIhatCTKRd11Kq~~4q8L-hOAhvWhXf0TqGGBASrpBDBMvlw__">
                 </a>
             </div>
-            <a href="./sital.html" class="font-SITAL object">
-                <img src="https://s3-alpha-sig.figma.com/img/12b5/a200/7676399526d5b3498a880715cc5e8720?Expires=1712534400&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=ccFQWnaMB1Qv~fsyL2j08siLqZq655uQvSFGcxr58P8GRW9HZE4oBcd~3q8W7kzCchKIwPBlE9C8dMwvf52eLB~rb-f7vh8H2GUGEBpOkaLM3mtjbKDZmiEzp3RvhkRyd83tQbzuqetYqN0x~YdXl~TDK5cRVBG3ndO-cT6ZqtCqAZtyX-t8tA4D8PMitvO9yl97vSLSPb~ttXICgF82uOVG8dAwnfcZ-sN6s3-BklfySQSqePctWWaRcJvY7ulx6R1SJ6PDe5BoLUDZ95SGNqC~PGHypRWAZNCLSd8W4Lyic65NAXEF-3aqPa~qTdnCZNiENcW-MIWd8P2QWccWEg__">
-            </a>
-            <a href="./calendar.html" class="calendar-WAP object">
-                <img src="https://s3-alpha-sig.figma.com/img/22e6/7065/1bf641e9229130b6ad62175026f73259?Expires=1712534400&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=hABUiGZXaymfTNHLEcdYa9aVGm~ZdhjWc7-Qod85BDlWv1~QUJ089wKmypGoGrPMQi11fK2AWa6YY4-vx3D70pcnsxI-Hd3vvksJG0KMajoc4ZWVXEhMJbWij96CrJ~9anlJAd7CPnbSSTFw5wBehhZs-zngZPaMIpzKuRXoCu8mlMS2inP8fUnFlOCl8nQ3h8tanTgaRSferUrQuWBLk5P-vKSGtdeQev89Vw1XbXjn5DJA~0v69vzMXmQrGDtwaJIa~YS1xE2qJqUQeqGlqu9OtuYlEkNWb9mjfFjRwFBM6XlgVStdymSnek2aBBGLMAnWEOAk1JE-stur0xsUSg__">
-            </a>
-            <a href="./fighting_animals.html" class="fighting-animals object">
-                <img src="https://s3-alpha-sig.figma.com/img/561b/f88e/bcb28273feb76678828c0afa4ee1dfbf?Expires=1712534400&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=C9fAWmHBLVbP~UAhvqAOhoKLwYnWmVRoxzs-ZhNvYdqaPdsgyLoPxQVwA-4n6nCmsa-dLDA6x52gF-zCKAxYqmibkrCIwBdJ8L79COWAIj6cpc36YyW5A5VwnumdR0yHGchDjXn8xIwR5bh~hRPkqYMIlp12oJWZ4wA7D1jvcyOht6dI~XqrDkvfzCEEnqkRCHrfkNBfhZ3YrVB0qli~~xbk3Z3b4Ob6j3TekEYBmKdu5hubirIeSPAalbTYQvrsq5qmPLY82ag3flR09K8Lh8xKfyQQVE2C0gJilg4In2r8oJnNa~PXubKBic1IxLGqHaTgXvxX9unBImwhdguITA__">
-            </a>
-            <a href="./kebabs.html" class="poster-kebabs-flowers-fireworks object">
-                <img src="https://s3-alpha-sig.figma.com/img/f79f/aa58/ec6d427cdeb8d9fa224df42fe183a22b?Expires=1712534400&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=On3jL5WeZ7NUkiF~B4glW~Iqv-tDph9Y1Ij6PjXq7VwtOLtvyXBZTBOkHNy715RSVkWEibAL7-Xr0E~cP-8VijNQZpuGAGCPTHyq0NP8B9ARzC3V8JXmSypJuG0dQAcgmCzvsq9RObakUz2-MtKzvVfgz4SrXJR54uSKFIcr29YzW9rih6ud52vjozF2B5ru4XjM8F5q3~kAR-LeR4-fJ3n7dDBRSUvV4WrWHLOiVe~6qg-lO0285h9eIoPx~BwhPZzRmRosSBaAhTl7z493CrvCZv9DhUeba75H2aKv4tyEkJ5tGE-PXrBJs4lzb2Bkh00gpFrxRzSuO44f6Sk0Lg__">
-            </a>
-            <a href="./Zin_kitchen_for_16.html" class="Zin-kitchen-for-16 object">
-                <img src="https://s3-alpha-sig.figma.com/img/ff75/0349/4c97959d1804df0f450667fb6a605ee8?Expires=1712534400&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=oN6fV0yKq-JPwrHWrSXHwn31Hl0-azkvmnjTyGqb2xS9rxqK~LIOOwOijx3CPrI67Vh-KBKgB1GRx2Zyr1PyBaVRV8g7EsEuPqr5K-JYhkolRhekCm6XCVIq-h6rDt6hBEI7~aOeIO5P4kyNL9ROB6KP0CSOsI3T4adZb0o2WP5DHeA9fJSvE6cDhKXMHp4gMuaW4qWuautb0KP3Kl79v2OdjSLt0fCz2CCpkg-fDvppdmggU0i0VXm7wmsov~~WX-d1bilbREPNriAWmQ2aHvmlrDNtXkSdX~M1ByQ3T~PVjfKJpdV2CmoqlHwf91Jo~bDi-ndS~XamlmhMxbdU2A__">
-            </a>
-            <a href="" class="posters object">
-                <img src="https://s3-alpha-sig.figma.com/img/f67a/1ed6/34a00b9afa879baff2d7c6a2d746fdfa?Expires=1712534400&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=A78fhv2s6Nkk2ynaJoaTC1ccbnd3Mc9jxbM6BNy11sQxJvgHO24p5k3FPaycNzjKaLZ93uXYNf5psmybODOscczIiF94JseSOV2XV97x35SmNPk0EDX0DCLc8XntuUWgWCR6Vy7codcNIuSho3UNk4MQmwb6oKnNkxlg9QyxrtK42gjlyWwgO4ICdA9gLQhYTG1JddtCION4Qj8slJj6G-eoaQjRbae0q9nsWavxEK99gnY5-vtvmEgU2yySw66MPmFgbntAwisLh4GDKJcqbv9qSytQqgMEQvn6Z8dt1T7rSwmUPm1wSj~VCjT3bmRIfJSF5uyfFPq8iopcdzfEow__">
-            </a>
-            <a href="" class="game-diagrams object">
-                <img src="https://s3-alpha-sig.figma.com/img/6166/3adf/3ce266ae594cf7ba53f3aeb39d53c64c?Expires=1712534400&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=HP2rpdBYG~jfYuv3Lva7DTJCTv66A5Vx78HXJ4~JVpREOv~DXryshohpgjdZLaEVXB1a4AB5MFP1oPbAM7HK~XIJvKCz84QIsw39-FxX5TYmT4LPYlro-MIa2WPxCltH9Y3i~jRHfXBA8Apjy3lpLw6YbI3zy8L-1G9EEreWRyKrR426o7UfQ2kgeUswyv4lxTQBBPCFALeE4i668aG8BR7zz94lz1N5RTxonPcLwOJ7j6IM6LoacdPXs44HKY6~lPLIR0WgVtQd4x2QQ1BVfeTZYk2OBfADYQzVZz1U5gL2lLF8pdP0pE-r0HWu-tFUH8n-rQaMyGGTss~NQxe6Zg__">
-            </a>
-            <a href="" class="visual-research object">
-                <img src="https://s3-alpha-sig.figma.com/img/cf28/7dc7/40c018b8c9f0cc5c89d35eae052fa8c3?Expires=1712534400&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=bF9j2Om7Ijy6uYFmnasbcwDcdZo6Be7usQnSU2P3n03Beo-~KpzRPnC4Yrdr8-EcwEcy8ursVMzFtOtT01FqOUInmj4O8mv3P3s6oIKEj-YNAzGsoTtLOVww50SeW1GeSF5CcVvmg4d0EAjT-coljiFG-In59vBZAturR5htEpydPs6Aea-0e8olou-rpMNxL8ixDZfkaSLjXU7JLMLOqZqOOasoek44PqYLTNqEb-76Y0UZ~tlffhDqcIhTN2kBAkiOLd52v2xBt~MTV1stZs1KbR7XOoumiloD6OJ03XwZnaFKJ34GQrgQlHc6y~k7V-hwM1cl-UdGaE3rZwu7pQ__">
-            </a>
-            <a href="" class="illustrations object">
-                <img src="https://s3-alpha-sig.figma.com/img/71e4/5ef7/6703d222d57894cdef74c9e64d8b2187?Expires=1712534400&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=lqiq5oN0yO~mG8mRqYclXpJHt-eEqaCtW4fW8HhUOnpzKoKymahQhQk0ho7N81Vxy4dl79g8TeJZxH5L-i-Wh84gH2TREkEFX9zr2NmIWxepMkJi6tKKLtSdbYxqdlVNgq2Km324d~-zHXxEfFE0ktJUt1tvx4rEsPHwaUiQ9U5ZXRPTgfrSGO8A3b0SoGVp6S~uy3M9Tnl8fKkBxpiMjPasqr-xQyKL5cb2TMPTMBW5l8-erA-Jd4KTEOaQePGC5EDI3D0yXMjqtBLUY5nEs~gE2omTZZvNB-6D7WsJPORaoGet1-Pk0UwnXT5p2wBg25qEkiLUFhDlNgyUyfVjwA__">
-            </a>
-            <a href="" class="chess object">
-                <img src="https://s3-alpha-sig.figma.com/img/14d2/b182/a44af8cf07bf6504ee310d5029147197?Expires=1712534400&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=OJMzoBEyQRAwwznBnkblyGpKJhzN26Br2XFL4-0KR-8yFs1OMhuuy0fgtVbUuYd9-0W5fxa1j2C1OXgxLO~BCCV0awY1tDTbTpm-avpCgD9b4Q42WYYQ317QJei9oK-eX6OArDaf9vbFRRKQn94HYlqyAb48NfaXGQICyQuhP0ZK-804sw4UxqhpQ4-Gt2-mokjM-9-Fr1B~6kbXRHXIhb7Bpj05xK4XSrgakwPPVNW0Z2LCE2B52SnPwBtfC6o3sOIIQ0UdDXJ1RpmMiGmo7BAo68qB0f0n7i-IxwxreAZgEuMdsQ9PaZqRkbSW8FhhYdzNkmgJiIkloKdHCW35Mw__">
-            </a>
-            <a href="" class="boovki object">
-                <img src="https://s3-alpha-sig.figma.com/img/1b5f/2159/0c2ef264b807154bfead64e205fcc052?Expires=1712534400&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=JfBlyGzH9WWGhLkpBfpl4QBGOI2cIZysUpupx8pqipGGN2iX7vNxmT3n2lFyIf72O-v1IdVWZ2SEDW2XWSrFVEHYbEzCql8g5tXq1OzfE-0qaNqlO4uLxVz8rJaDanRtdWRe7HpFiCkYVTHC0aFcyDz587jRUJ7eLMx0BosM9vjMggUYRTSavfm1hKNuJOaLVL0b2Fqd85iG7k3LOuP4ZSbS1OkfA-xPdaWnANJxTi5JOV8-681sJ7iDA8GvFlevUivTdkfPi6fOdSG0VblcRLyj-lvVPad9xXMCL4pneU4V61P036VGdeQ6TJPtQtkafHvEo15NzcvHQCVV3YcmMA__">
-            </a>
-            <a href="" class="tuesday object">
-                <img src="https://s3-alpha-sig.figma.com/img/818d/45e5/dd7994d9b02f6de515089624767330fa?Expires=1712534400&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=Xfo6uERwWMnAELXZ4ZqVXpXyxlTb2QCVtRu3XznjpunaN31xMM3sZaK9XEc-tKJWlHSbf7YjLPZAxu-aABkia~~mrJjS2S4hvpcyFWkr2aBmIF~rUtHi5EblBINojpK-KJPLKFJyI36yfmPNNXuoxjyCZrflpgPCQkGSrh~vOEEBn1hdems-J1DIEMGvRfNG55QzqA0M1fAZdNVNHwHNjKdRQJDRdtJv-BrFY3SfZqrUdsWMDdBoeRhI4L47GU0BgrfRxJIqPQQ6lzGHpcf3jsGo9kB6cRUeEn9cG0qYwr-LeqA9x7HsnPde5BCCfxUM77QGQcD3PngrC9aiH-6d1g__">
-            </a>   
+            <div class="calendar-WAP">
+                <a href="./calendar.html" class="object">
+                    <img src="https://s3-alpha-sig.figma.com/img/22e6/7065/1bf641e9229130b6ad62175026f73259?Expires=1713744000&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=bWwYsM3IXXx7Lcho6w0UCvtx0eU8hjV5eTorRN7SNoAILc2gH75NzOhu9goILp91opERMB1K6qbHVIH8WwRD6lZ~Swwjvrs6kLnb3~IKAXyFIJcWnUbRMFA0yHsJJR0Uj5TsEQLwS3fleJ5RUBX83rbASCel39oNhGgFsx1HwJE~YYitLD~7uR70DuGj8-8lN-l96XymBPPwgt-LQbQ6EpT3ZHluH7m18G4A5-lkZrhzQaX3rO6dasiEyDfsx-0YeUv20IomPQtMdOMCk13pLRp0Q9zTzuq9UQKG~66wF~H5VND30AoVNNqVxrjdCH2cooh8kKM8ybDLonyjLr5EkQ__">
+                </a>
+            </div>
+            <div class="fighting-animals">
+                <a href="./fighting_animals.html" class="object">
+                    <img src="https://s3-alpha-sig.figma.com/img/5c7c/97a1/4d812788e15e0933020ae6aba98a072d?Expires=1713744000&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=diAM2dVq8PK2-YbBHYBa4Yotrduqiq1ObSoFFQYhYwydYEnUPKt4YHMl2Pol6ZCiWyII618nbsAoZcR5aYC7nnTdRYJFNA4LRg~uQqaJ0jmSCEgqZRMEsGbLIwfo1klab1TVk2ryCRPDTm7JXMF-JTwmI~5VMycvQIiiEaJiDGVQoEFFsCXx2QvyHweaONGA4uItsy-d75FB5p2ETIBDfkn2CDPSRagyQFluJqu28893l4dUJbDF8EEH0PCV55jKVD0C0O4E~DVtLBiPpdjMRdrZp7oQmA3VvzLwxVyT3vt49sT48qriAhzAlr-9xDedXOXhgkvJkaxChWJI7TiyTw__">
+                </a>
+            </div>
+            <div class="poster-kebabs-flowers-fireworks">
+                <a href="./kebabs.html" class="object">
+                    <img src="https://s3-alpha-sig.figma.com/img/f79f/aa58/ec6d427cdeb8d9fa224df42fe183a22b?Expires=1713744000&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=GBfvDVdpIZfbeNbXhOnLmgGGK5bhHmbM-PF6794JG-fQFRa3AspGpiSlvYAMtHryGPSV84gt9zL~akXJFrDSboghkr47KJ1bObn5cM52pbTckLGQg1EstY0zsuNDb~XAt4WuPBEDU0UwpPzdjmCSnaPN~aSFtkoZeBBC0nNPJLmFvYECZKsSNJCjvwP5BoVh~VT4xEKQpQT6r81w-vZvbKnJHOTimeeDMSOsXBSh-0bJHONhKGJCVpj-i~r6B5DvdiqmqQWE-3Iw7Nw7lASct6QuDZ~1W~Sf3IBLZCpUQrPFLWPutt4JLqzve4qoPMS0A7utkEH3C3ECuQz8l8NjvQ__">
+                </a>
+            </div>
+            <div class="Zin-kitchen-for-16">
+                <a href="./Zin_kitchen_for_16.html" class="object">
+                    <img src="https://s3-alpha-sig.figma.com/img/ff75/0349/4c97959d1804df0f450667fb6a605ee8?Expires=1713744000&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=d1Qg8iun9fZeNLQAPmI2Vf91ZHcALdZTkKMAgEDOLzGEA1tv9I~IqtOY2ElueuU4-biIJtxzRsDx8MXx0ItNs9Wg0u7PYx2oAqOKr-SHNb9YoyyvOlD7VNV0AeI~HuGV8b4UuvXXmSn~b4JcVePSH1ymIBNaARJw8jQqyK1luI-QHVFK21uahsVLIJb4pIdUPtnAlAFr337et6yTunnGip9WdetP8HGqcy5enh40iaj30P5fTdlEQnQ2Z0FDH430p~-lfEJ84~dIMBHo8DD67Unj3BE8YjoYB5n4765Zc8rGphJ6dttMLeusRRhEEdPNFxMCukUQ9XEQxjZbF8Sbnw__">
+                </a>
+            </div>
+            <div class="posters">
+                <a href="./posters.html" class="object">
+                    <img src="https://s3-alpha-sig.figma.com/img/6c28/fe61/50dd822aab9b2e77380f141f4b1ac845?Expires=1713744000&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=nPjkybgqwNGT1pTtOTF0231RsLqHfBSllCmcz6rXeYQFGdgIH0Hc3FHryBlBm6zU6W48lp~e6jKL~sxgrHiwTPcLgxaNY2qZV2pDEGpy7BEwjJ1SlVrm~fJg8eSLp8xWmeT8PJuvr~CQcYwJwwOUEGh031XW7uHfTOApFvMFnG6bT5LjIdAumva0fn1SDHz3IgEQqx9rAf98Pv2IxkLKKlv7WoeSAER1a9JcJIrijJnDpOLRdWWrIpVd0IE0MWUfNvu5bWt9nW7WRb9PjoIUOoPvcS2vK4YSEij5kMOVfI~I3v8zXWT-Xx2gxN7qOp3GOQYwKau9D~0hOaOEWwBRBQ__">
+                </a>
+            </div>
+            <div class="game-diagrams">
+                <a href="./game-diagrams.html" class="object">
+                    <img src="https://s3-alpha-sig.figma.com/img/6166/3adf/3ce266ae594cf7ba53f3aeb39d53c64c?Expires=1713744000&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=NiX~V~T8U9GdMYIAT2uCp5GefyudBCvsFba8mSpJIy7mYpUk49M2BCIb9gYnqXSYpHR92VZNwlVYJusXIuiGZDyAJvRiSTm5u1JvPAb1lo-4LQ4GNGOYZsyaoJ5zX6QUX0KsSPq7E9cUNEfEaQGhqisgxvra34Ws2iXswVpnx7Xpu5rLtD~CuGDNtgFi~5GEPtzq8Lx8xy860tHDIG~dGoLOXAwy7CHzmg~N8cHsolmluOQwlIUDZuACIxySapFR6S~YE-zcKXEflnG4gfcH6KPRAHYmEDWCbKC8NUr5DFR9Lmf~OjEwd4PVmQ8CvCq8gGIZtnKPCUifd5-NTDZDnQ__">
+                </a>
+            </div>
+            <div class="visual-research">
+                <a href="./visual-research.html" class="object">
+                    <img src="https://s3-alpha-sig.figma.com/img/cf28/7dc7/40c018b8c9f0cc5c89d35eae052fa8c3?Expires=1713744000&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=JZosBTowgDoDdQAO8zTcbd6gpNArgs0vP1Nje30sT1kiVSQTw4EMAkPtLmW3uqMrtSdQxZ0TKy7XrHeEay6adu6U0ZZG1iUsfMuS1pf0QmovCJ0C6IaIsuiKj4exd6RzAQKcjp8JYy4VAgU3-mGQDK35E0mtFajwN~bFERVUrN7PhVCo~3d6g~0WoEDyptKNFWD1iMsOgskKX8sn5~PT5Qvne~YMw4aaaZpdiUj8GnfGE7KRa1MLT~nIJ283kZgWyTilEvjCqefCPpFyHBD0a0LG7bDxUBi30CwFcEm7juDE5A5qZVGdVvjszK3HdofY5c7VNZdx~L8CnjGRR0vjPw__">
+                </a>
+            </div>
+            <div class="illustrations">
+                <a href="./illustrations.html" class="object">
+                    <img src="https://s3-alpha-sig.figma.com/img/71e4/5ef7/6703d222d57894cdef74c9e64d8b2187?Expires=1713744000&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=pM0-kiPxVG4sRNUJ8J8cfDKQejCxoSNof5OWEIFZHMm2XLkq1-VyPsKtX5ZFC~5TsmZQlfhwPOb~0Bq8kVMd6OfIyVSfHMmAmtl21ACWWast8lcwGPoGuseSLuR-HibwZB2gueYJSftev7~m8G82VmFKjWiwEQUMoTgbt6PmU9EVhnNBV9h~rLUo2skUZHGSBBzmiynCausK-ZAdLC3g2LaM0aq5TKLrc-vyKq4IsLnMOg19FtM7iP~ELXDHlHr7WfLss0CWLY114th6N-JetWu-14qJQ6zrQKuKiXxeRym0QxJ3dvlDdxdN4RLCC3xPv1prwfaJjeHTXZ8kfyrcTw__">
+                </a>
+            </div>
+            <div class="chess">
+                <a href="./chess.html" class="object">
+                    <img src="https://s3-alpha-sig.figma.com/img/14d2/b182/a44af8cf07bf6504ee310d5029147197?Expires=1713744000&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=VWWWCnXNNj3WOG~NJGpPU91MvBfuFtLoj9bian1CqSrl1~sfk-6tF8Sl9vxvMgcsPb5jRGArGWmDyCGVbHRIQhJflTNGpLRosrrtZhmn66TwUesc~KyfzPtqf8fgIl3hJmmNqhHGwxA-WJvQ50vRXAMZzPCfKXVPi-aiE7ThvLqQv6TuWTY-vAk21mwFADazS3pJPW4ou2diWetjH5hlmI8fMf4g-9IMvX-4SEM0zWSnyZygozxJ3mz-v3kAtJYTwaCNJzdY56mysEsqX6MzXtexPHrhlsU8SGp7~vYDmnA0KGJPcNjF3y7~lIMyPukYxxn1kHD3ZTwt69E2yQW56g__">
+                </a>
+            </div>
+            <div class="boovki">
+                <a href="./boovki.html" class="object">
+                    <img src="https://s3-alpha-sig.figma.com/img/1b5f/2159/0c2ef264b807154bfead64e205fcc052?Expires=1713744000&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=q2-GxjeVlRn4rELCu8mCodmXPDfS6dK6kWJ2GMMqhzSZnET73pZ5f40VjaVT6k78j~4N~4TV~Ypk-TAV9Szc7XKtbr~tqfTpcKXo~1XLEq2EOPRbsEx5PKnQ48rR1qUxpihLxFAMWFfgHak-D4g8f5ocFJEf27gL1MW3sLYdW5Mjwl96XIMyRI6XyamDfPuS7t4-CcABM~X8lHNUDKrzqLd~23~XhK1cCAY5S0G2j0LiH-M1PpDKyeqcTucc2iztUun52gjQ5G6HefytM3pBiYT~VNMokoVqN0SAW5FFkovbZhOInoGff6V8PA3iULfQfPqPOrLhMOFDoy3~JJnZsg__">
+                </a>
+            </div>
+            <div class="tuesday">
+                <a href="" class="object">
+                    <img src="https://s3-alpha-sig.figma.com/img/01dc/3371/af5c5f4cf6e7034b2bb78c14c455a434?Expires=1713744000&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=WiyeZk9zGDdyh96vpk2qQAXb24yuWzrba9T1HKQNAhye9fXraqiUCNELz7ZD2RzbLyX74HGISXyd823kqOWC5pyOOEHwygPuO9JHla-r1xf9KXvuAR7PF805tPOjtj0wVgmNELhma-Ddg4pfa-olLD9W~9slplct0oDd-K6Qi0j1WIyE~nmqgHw6ACW2pVq5JeLQIgQEImqB9vK8SQ8YB0B6WbuUD5J-tLmGG9uY7Uk4nOhTvSXbimF8M5SQuG2A8lRbu-87MFD3CvfRljTIKmVUJw7vKb1gI9XHHS-OLLgwVAmT6Fre6JIAwXE0wKQKSFMclt4eRqXZoE2yD~TQkA__">
+                </a>   
+            </div>
+            <div class="fox-elephant">
+                <a href="" class="object">
+                    <img src="https://s3-alpha-sig.figma.com/img/8f0e/910e/edd64068ee04bd659723cc620b03cfe2?Expires=1713744000&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=KUZJ3bU1Byzeh1cVUvtg04T9bt1~l430bJUNhSSg2H9y9l6RRQ41X8iMBMwCPT7wpBJOZwcBhbYbLlAvjWv99~3ecK5pcSOLcj~oBfffRwzqAvWWIMuDg1rtEVH8-z-Ku0MvGF45OTnalVb~wbRf1hEm9rq0Zaz7PkVsxKEH93gktAekjfQfbJMe2K8PtMXBw2idluRFPW8u32cEbiwLYXMFpOeAE1w6-H0c4LUC4wLDcVDyjGKhFQ16PceLu0mYC-FzunWlgmTVmYqY~JEzDzsJVGnV3B39wmeXQyF19Xz8pGNp74lbi8va0YBmZVSPHaJhiUPeN9DI7eS1WICLtg__">
+                </a>   
+            </div>
         </div>
     </main>
     <!---<script src="сайт для Сони.js"></script>--->
