--- a/kebabs.html
+++ b/kebabs.html
@@ -21,9 +21,9 @@
                     <p><br/><i>Kebabs, flowers, fireworks</i>, 2023. А2</p>
                 </a>
             </div>
-            <div class="objects">
+            <div class="frame">
                 <div class="one object">
-                    <img src="https://s3-alpha-sig.figma.com/img/f79f/aa58/ec6d427cdeb8d9fa224df42fe183a22b?Expires=1712534400&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=On3jL5WeZ7NUkiF~B4glW~Iqv-tDph9Y1Ij6PjXq7VwtOLtvyXBZTBOkHNy715RSVkWEibAL7-Xr0E~cP-8VijNQZpuGAGCPTHyq0NP8B9ARzC3V8JXmSypJuG0dQAcgmCzvsq9RObakUz2-MtKzvVfgz4SrXJR54uSKFIcr29YzW9rih6ud52vjozF2B5ru4XjM8F5q3~kAR-LeR4-fJ3n7dDBRSUvV4WrWHLOiVe~6qg-lO0285h9eIoPx~BwhPZzRmRosSBaAhTl7z493CrvCZv9DhUeba75H2aKv4tyEkJ5tGE-PXrBJs4lzb2Bkh00gpFrxRzSuO44f6Sk0Lg__">
+                    <img src="https://s3-alpha-sig.figma.com/img/7b7d/538d/924987f6e849593bf54a3f7aacd7d9b5?Expires=1713744000&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=O7L7CjDOsLNT3M9-n7Dm2p266idf5NfS68Al1gjd-op4Jb-64EII9BvlkrPraQNkuxSVsWo4ASKozNHKOp6g8BhEzrOqcW~-yWPpQqRKlP85qwzczdJawXhxe~cjOjZ0FIHmT7Brnc8rJqJcT-uhHfSNUjHUNhy~IYzNwzP2R454kgfpNtduNOdqoFQDFKauKK1RrBKglWzsJrbGF2R2TgGtZ9KYLvTApOa~jw9TX0BHKYoTu6OHYwtYHjD4Zq-Jh3YM1TzbxSEVkvdKGHe3HefTK7uCNYCzI~TuS~6~YtxuDg2HphSm32ZompfKCVMQcT8c1oWb3iFSaB~CHar8uw__">
                 </div>
             </div>
         </div>
