--- a/sital.html
+++ b/sital.html
@@ -12,36 +12,37 @@
 </head>
 <body>
     <main>
+        <div class="about1">
+            <a href="./index.html" class="about">
+                <p>Works</p>
+            </a>
+            <a class="download">
+                <p><br/><i>Sital</i>, 2023</p>
+            </a>
+        </div>
         <div class="container">
-            <div class="about1">
-                <a href="./index.html" class="about">
-                    <p>Works</p>
-                </a>
-                <a class="download">
-                    <p><br/><i>Sital</i>, 2023</p>
-                </a>
-            </div>
-                
-            <div class="one object">
-                <img src="https://s3-alpha-sig.figma.com/img/0633/1fc6/d6f2d7de998af7712204dafe56d001f4?Expires=1712534400&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=JF6dBgj7gtv-czGsHCNkiW3PdG28H3X06Nmt1iBjdnzDrX46ggCT-a25dneH9MEAtFr8sxQpYcTVlHIi8TnUjTjr79NLPtnXoieCMi9mHGJMwR8lh3Ag3Xlt72BPU52Q1D8I4QgL5tbbM-xLVbA6VA5hMIP6jAGjguCVXwF5llt~Z2-i3s6HmMDCP5QD1Wur8ny8UokwE68m0CieWuyfRhB2k6mmdvtA4qHdRW5qhTwV1BYJYhsYBZJirQeWdD0lMvGnMjzU0FrcynhnKdwswYFWBzIJU0Ts2zVyGwcHgRxnwJXkYzYfldl9bXJc2epJjJAuiyUp40OAEP9DrAdB9w__">
-            </div>
-            <div class="two object">
-                <img src="https://s3-alpha-sig.figma.com/img/70ae/bab6/6c808db03264d02f8f28474fe408f856?Expires=1712534400&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=DwzYyZ4LR2SyqjQKzTpp0ccC7RpUy1GKjTPvoi-SWivw4iQqTjW~RuBTWetq9unleL-ZraW5p2BH2vHQNevC5NMPIqa6XVjkPmWI5TvdbD2ecbDZxipTKnYPVll9DXx8kwq5Mh8TTPiR46MybYBiURYaY9tdkL5FQj5gndXV~hdWnqoPrb5bMW2byQyiXHTWp7s6~Els68B9iaAJWjmBXZeBcS8k4YsY~wtAVdraIl-FEkvlIFFhoZ8CpGSN-XJ1jUwHDniVwFW2E60F29OvSSCYnGYkjUKlXGA6QEdsNXOVsLNKaO2AxI3wOJwwN037Gpx-EWYXgQPJHCuIA3HAkw__">
+            <div class="one-two object">
+                <div class="one">
+                    <img src="https://s3-alpha-sig.figma.com/img/0633/1fc6/d6f2d7de998af7712204dafe56d001f4?Expires=1713744000&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=PkFzpmVkPVsbk6KNQ5JHSjXXc5PysdLob-I1T~5FlOFzpVDH7TCNBP3OCP4VVr-gA-S5VweCBn31jcTaD3OAIR36piqSg1hreD1IG5s9cProp2~DOEnM6~On39HkutN3e0vaPVsllx87BfQrGscdb9xPxyYYqqXwnjFDGcq~LkmjXtHSbJ5Z7rnF2NuEA~MmTaITVw8UdZzDCJ2f823cfj93h5fXTXTAcjJwHMOQTvcnZnEC~Nrt0SO6KT11XCy7TkXIHQ0qaFExhXA~ODE291qy6Bs0INbUa-YruNL6DPdf9GU3UjJik-OevqU0EKRdUx517U9OmsFihhC8ykCHpw__">
+                </div>
+                <div class="two">
+                    <img src="https://s3-alpha-sig.figma.com/img/70ae/bab6/6c808db03264d02f8f28474fe408f856?Expires=1713744000&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=dLncqNFkJKs1uiyZ4t5bPMnNDuEvvEeQtCE2xBQ7ewkN71oaAjQLlzZuxEmwrOs2WJRhSn4AB9voxw2EItDU99JvDpRuje7U77CdE1HcgNN~7eAIn3sw9v6MMbnkzgx2dK-YXwZfBQKj9EKnvegiAVUZH8Ug~v-xq5KttlcfKoiPFTlXvoAHcs1GCme56P93-zYp3X4m-MUl72t43ATlwuNf1ID9cBSTjWCPFK1Icf8zY46Ok3cv2zRuRvJ-blqNROOpVD40rsy03DRUSm1xpy08ou4yqjx9CUha9RLCbNJXgdZtRaf9oKkeDyXt4sgCYPUBwo9gXZCzleRJV36NdQ__">
+                </div>
             </div>
             <div class="three object">
-                <img src="https://s3-alpha-sig.figma.com/img/8ab7/ea95/de2132b0403596323614c05244c7eb3c?Expires=1712534400&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=lcYpmuuwzupzLLspuAPKrPPAAAVsSIutn-hUth5orgq-2TMrSDtVvee4JIitnvRz51X47GnEZFeA9avCMMBLI8b~N~Pwk-BXwRUfOiRNhvVd1aaj14RMmlvPZJpSt8W7EMPOh2ry7p~JmJlY0tuDb1VTgra76HtlIs8khrjUiHWPfn-nsfNoJuKMjMQtmq3MtOxwlZoGkajIvhBUe9uuiAlUPdAm3LyE1tkPUMPYvkbReCZQV8tgIMD37Nvvg4MznKoumsjRhh5N6yw~tpIIwgTT0WG9mkAy8dkCdnRYbopbuAdFoOkSTcKI~tNs0NM8VsAMj1QOq1gZbnH~9~8wQA__">
+                <img src="https://s3-alpha-sig.figma.com/img/8ab7/ea95/de2132b0403596323614c05244c7eb3c?Expires=1713744000&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=JALTozGy1m0An6zDeJyJFdX1rD7FViWC8wOVt124zkExp-ziS55yZP8~qQNipcpvzcM4ikKVPww1pZnppaA~2x8KHe84A~dDfrDX50stb~hvi-7WXF58h6Fb1A815D-khPaQ7TlW6Ya3Ww6qlXKZiVoOJxnqzvHHMe9PB68L2sNxbn6JlPCQZsZG17bN3PIKpTeGrKHcqNFh9tHrzS9Z15ZAv1S5yopdNMfR5pgfqSsr7ELM5Hrff6bKXM4Qw7DD3QrpUiwlZsshmilUFMPq1tNaCFKKq780-Chvt2QvII6rT7ShwIyVucwtWFCmBop-YA1bOGWrzC8JrbxYk8bpfw__">
             </div>
-            <div class="four object">
+            <div class="four-mobile object">
                 <img src="https://s3-alpha-sig.figma.com/img/81cb/ae7b/eef42ea350b7d8556da979131d46c98a?Expires=1712534400&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=EI9qkJjRyzAgvuJ-87JsOS2iJJcz6I31w9X61X~57x~edefEKBMnSDBIfZQKagHqVaiUsRLTdg3FTnO4XVQpUCB8y0J1y-MqTRmCAhvtQu9TKY4b~MsKEtEp86DfL6YaIE98JpGYVjBVMCNBbLSv9LUJoA2E3v3UcbHdhj3c3D3E-X38qjOfe0vLOzLqBWN4r8uR3tAwH7rga4FqV6-8ODUXIFelqc1DrydYHVU1cqs46zmt4qTuH6GRKHCTgEU5JofDUOKwQZF8EzJeE7UiaAMhzFHceH8dzK~CZemqzqkbiOzjZefvwW5IM45BuNeBxy3kZAs-dE90lAJKGqUWLA__">
             </div>
-            <div class="four1 object">
-                <img src="https://s3-alpha-sig.figma.com/img/3c6e/3f46/df6bfce19e6627852a900a30fd90ecfa?Expires=1712534400&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=lJv7DTt5qOXDMNwPy1JxrAONShHvDZnXdXliWL3tyEWRZSqHil~cJV06eltjo7hOVTBL3xD20DkwcRFpsWTPyiw50UVReBWQzOxiCCmzTNqHSfQy9BnQrV~UzKRnt7LDoCR~uks~dg90pZdvc-1LV53pfMytuiiy6oHRg2ejxglzz3JdZxONhxGcAYsAnK9TZmsyXRixZ--~iYJUcV8hjeqM7ma6EqUYnrFRhA9qabxUhgYtbePNaNCwS~19GsssSoBNeb6nH6PcU9e0c-gzEUvvcmXaHejvlHnDrlXu-ShA30vCyo~dPdQ3u4oIpKTvmZWJeypS6OvTBoCRpIFz7w__">
+            <div class="four-computer object">
+                <img src="https://s3-alpha-sig.figma.com/img/3c6e/3f46/df6bfce19e6627852a900a30fd90ecfa?Expires=1713744000&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=Rot8fKQzPxSInWNMitNQUdhdU-oR0Al70DmZcYtNxvfb17w0b4xKJFpv-ito5qnTBZVWlaba4W5VEZ-LqDU7KpyCvx-Yz7w1oDX5WaPBWdyskC3zR97e68J6lAx7-F06cTqUf373y1hGbAFKxtGKHqVD5EjHEbG4WCRl7IayUyMo5LUGACKidIq87ltPpYT7mZNA9r9CGGhwvQ3fT6HEW044seLbaDZKAwaDHhtWWguAF2zNPtWyxIn-rTK19E4UgSdE6z-40pnE8e~RMxBcESzt1SkDCRG~PU2y0zDcCYPwj47rPBgmvJ7-gTdqHut97k1XzUMhIeNijvrRRO5p5w__">
             </div>
             <div class="five object">
-                <img src="https://s3-alpha-sig.figma.com/img/0115/d83a/749afe0ccc0299fe64c57283fe84b08f?Expires=1712534400&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=atLwWhYztME~boG24kmc84FX6tl-WSs4ItufK19DY6ZAPhjoTTD8N1BLSWF~G9egv-S1VhNnKogM6XRDGOaXrKL3Tn2LTW-cIMQ8WHB-JQOlfcBW2TVp8vjxgY4xMDlpQFXmD2zBUF6tjPiXW5glLLLeUddD58iKtCCjI7RSL0brjEIjsqqQXKQHHVcbIVvoU2M6QU~jUIzsLWJJMS1yDDx-2gOMskCUD72yamg5UUrtxFsGkYvyhVram78daGnXFFogg-~zQ5J4X6XXJsAGIujoqNo3ar3mAAmACN-Z1A-LYxJ50LzTohqgmVHDUuizLqfQO6BqkLCKsir0TS2hEw__">
+                <img src="https://s3-alpha-sig.figma.com/img/0115/d83a/749afe0ccc0299fe64c57283fe84b08f?Expires=1713744000&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=nMFoJFJZoNPSa5blZxCQVUgLRaU4A17PQ1hRQ1zv42zDdHETwa-vsIJ1wSrMUL7Lz-3Xe3Rl043izVgVlKaARNWGU6PTL~8Xow-0AQYcWmgRqOtpL5eioBunHJ7C8glQP5SwSauhnDiu9tMMlpLmcOtHIZGUCi1mJG0g~x~ZEKGDuXNUJTuZQ8BmX65k9eGiuM5jO3nyyV6PLNUm9cH0UjSP71Zo55Cb4IJKe6D8edncrgZFvUpO3XNxdLjhMLCN8Tn71K1geUZcaKcHgp4YQzxaCeWOfEFzPvK5-Nw5eOd6buDcx7Cc0I3mpwkZCHhnbGp3JeEpaKNzUx3MCHdmJA__">
             </div>
             <div class="six object">
-                <img src="https://s3-alpha-sig.figma.com/img/a16a/b4a7/d751b2f2903f395ff804ef3a3f3e5adb?Expires=1712534400&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=I4yUJP-QOlhYQ8kScCu4RRufwoxMDz4S6X8yVLHwP0ygv-oR4XVdlKPDyxDz0lUG3RdzdF1U~nZR~WnHRSW801x~0FBB83khqv0D3QcTjwDpAJqry-kfhGVOOZI1tKzGJGZ-xfgePYY9yUAtvAFbZ3V4OcNVc2EohB9XHuILYCFmhgwT-YrLRx3AxRpDNsSjiljED5-v57NK5U6kPBAai8P-6jONykzBIGdbH9ZAo0n05Jewfc7JC4moWEgV-uIBhTp432eWTsnQVYv5lM6-Rxy18w5eZ1QhNhgSP7Yc8QyDkVMbDgCT9D84Rus7xvlUrvSmrBgvZCI1jlO9OiKd-Q__">
+                <img src="https://s3-alpha-sig.figma.com/img/a16a/b4a7/d751b2f2903f395ff804ef3a3f3e5adb?Expires=1713744000&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=GEhV91p~7XjvYTXiDXA6GdXoxnn4fHUKeA-LeK6j3BU3lg6osYoNOqaawTBD5PpOF2UmjLOobZhRpuDIoaGs5kvqveBHIWszHWdGQodXEAy5LtqSemlhaIayjOFAszwEkhHIAK2QpTY47jUsr9ov2cdObYG7jqmfHqWlw02m7B3SdE8VjQBOwTk8kLVPQF-tPQSGWY1bQZEHPMzmex0jM52Kkms~Xvcz78NMOUW3PjUv76iM8Y9X7Zf3ES0Ik08LiPUodeMkypaB-uHlig~3SLk2dP37Vqyi4X1iwiFni~X2mSz-Gi4PZ7B8pfHW0BwZlcjqQ1bfbFlDPkLYcTYMEQ__">
             </div>
         </div>
     </main>
