--- a/index.html
+++ b/index.html
@@ -78,12 +78,12 @@
                 </a>
             </div>
             <div class="tuesday">
-                <a href="" class="object">
+                <a href="./tuesday.html" class="object">
                     <img src="https://s3-alpha-sig.figma.com/img/01dc/3371/af5c5f4cf6e7034b2bb78c14c455a434?Expires=1713744000&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=WiyeZk9zGDdyh96vpk2qQAXb24yuWzrba9T1HKQNAhye9fXraqiUCNELz7ZD2RzbLyX74HGISXyd823kqOWC5pyOOEHwygPuO9JHla-r1xf9KXvuAR7PF805tPOjtj0wVgmNELhma-Ddg4pfa-olLD9W~9slplct0oDd-K6Qi0j1WIyE~nmqgHw6ACW2pVq5JeLQIgQEImqB9vK8SQ8YB0B6WbuUD5J-tLmGG9uY7Uk4nOhTvSXbimF8M5SQuG2A8lRbu-87MFD3CvfRljTIKmVUJw7vKb1gI9XHHS-OLLgwVAmT6Fre6JIAwXE0wKQKSFMclt4eRqXZoE2yD~TQkA__">
                 </a>   
             </div>
             <div class="fox-elephant">
-                <a href="" class="object">
+                <a href="./fox-elephant.html" class="object">
                     <img src="https://s3-alpha-sig.figma.com/img/8f0e/910e/edd64068ee04bd659723cc620b03cfe2?Expires=1713744000&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=KUZJ3bU1Byzeh1cVUvtg04T9bt1~l430bJUNhSSg2H9y9l6RRQ41X8iMBMwCPT7wpBJOZwcBhbYbLlAvjWv99~3ecK5pcSOLcj~oBfffRwzqAvWWIMuDg1rtEVH8-z-Ku0MvGF45OTnalVb~wbRf1hEm9rq0Zaz7PkVsxKEH93gktAekjfQfbJMe2K8PtMXBw2idluRFPW8u32cEbiwLYXMFpOeAE1w6-H0c4LUC4wLDcVDyjGKhFQ16PceLu0mYC-FzunWlgmTVmYqY~JEzDzsJVGnV3B39wmeXQyF19Xz8pGNp74lbi8va0YBmZVSPHaJhiUPeN9DI7eS1WICLtg__">
                 </a>   
             </div>
