--- a/boovki.html
+++ b/boovki.html
@@ -15,7 +15,7 @@
         <div class="about1">
             <a href="./index.html" class="about">
                 <p>Works</p>
-                <p class="download">Colors collective</p>
+                <p class="download"><br>Archive</p>
             </a>
         </div>
         <div class="container">
@@ -26,10 +26,10 @@
                 <img src="./портфолио/архив/преза проекты 1.png">
             </div>
             <div class="two object">
-                <img src="./портфолио/архив/коллекция 2.jpg">
+                <img src="./портфолио/архив/Снимок экрана (1972).png">
             </div>
             <div class="three object">
-                <img src="./портфолио/архив/Снимок экрана (1972).png">
+                <img src="./портфолио/архив/коллекция 2.jpg">
             </div>
             <div class="four object">
                 <img src="./портфолио/архив/коллекция 1.jpg">
