--- a/calendar.html
+++ b/calendar.html
@@ -55,8 +55,8 @@
                 </div>
             </div>
         </div>
-        <div class="video">
-            <a href="https://www.youtube.com/watch?v=pxClScJU5w8" class="about">
+        <div class="video about">
+            <a href="https://youtu.be/pxClScJU5w8" class="about">
                 <p>Video</p>
             </a>
         </div>
