--- a/chess.html
+++ b/chess.html
@@ -18,7 +18,7 @@
                     <p>Works</p>
                 </a>
                 <a class="download">
-                    <p>reeeeeep</p>
+                    <p><br><i>Repaper</i>, 2023</p>
                 </a>
             </div>
             <div class="frame">
