--- a/fox-elephant.html
+++ b/fox-elephant.html
@@ -18,7 +18,8 @@
                     <p>Works</p>
                 </a>
                 <a class="download">
-                    <p><i>Posters</i></i></p>
+                    <p><br><i>Fox and elephant</i>, 2024. Gypsum, elephant 
+                        21×15, 5×15, 5 mm, fox 21×15, 5×15, 5 mm</p>
                 </a>
             </div>
             <div class="frame">
