--- a/game-diagrams.html
+++ b/game-diagrams.html
@@ -18,7 +18,7 @@
                     <p>Works</p>
                 </a>
                 <a class="download">
-                    <p><br/>Визуальное исследование Диаграмматика игр</p>
+                    <p><br/><i>Game Diagram</i>, 2023. 15 × 24 сm, 128 pages, Colorlab 110 г/м²</p>
                 </a>
             </div>
             <div class="frame">
