--- a/illustrations.html
+++ b/illustrations.html
@@ -18,7 +18,7 @@
                     <p>Works</p>
                 </a>
                 <a class="download">
-                    <p>Иллюстрации</p>
+                    <p><br>llustration. Pencils, paints, pens, digital</p>
                 </a>
             </div>
             <div class="frame">
@@ -40,10 +40,10 @@
                 <div class="six object">
                     <img src="./портфолио/иллюстрац/photo1705417014-01.jpg">
                 </div>
-                <div class="seven object">
+                <div class="eight object">
                     <img src="./портфолио/иллюстрац/русалка.png">
                 </div>
-                <div class="eight object">
+                <div class="seven object">
                     <img src="./портфолио/иллюстрац/собака.png">
                 </div>
             </div>
