--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
             <a class="about">
                 <p>Sofia Khokhlova, student at HSE Art and 
                 Design School, Moscow (Russia).
-                Sofia.khohlova@yandex.ru., t.me/sonahoh,
-                instagram.com/soony.a</p>
+                Sofia.khohlova@yandex.ru., t.me/sonahoh</p>
             </a>
         </div>
         <div class="container">
@@ -29,7 +28,7 @@
             </div>
             <div class="calendar-WAP ob">
                 <a href="./calendar.html" class="object">
-                    <img src="./портфолио/гл экран/инст2.jpg">
+                    <img src="./портфолио/гл экран/скан2.jpg">
                 </a>
             </div>
             <div class="fighting-animals ob">
