--- a/posters.html
+++ b/posters.html
@@ -18,14 +18,14 @@
                     <p>Works</p>
                 </a>
                 <a class="download">
-                    <p><br/><i>Chess community Edva E4</i>, 2024</p>
+                    <p><br/><i>Edva E4</i>, 2024</p>
                 </a>
             </div>
             <div class="frame">
-                <div class="one object">
+                <div class="one object ob">
                     <img src="./портфолио/едва е4/1.jpg">
                 </div>
-                <div class="two-four">
+                <div class="two-four ob">
                     <div class="two object">
                         <img src="./портфолио/едва е4/плакаты2.jpg">
                     </div>
@@ -36,7 +36,7 @@
                         <img src="./портфолио/едва е4/плакаты5.jpg">
                     </div>
                 </div>
-                <div class="five-six">
+                <div class="five-six ob">
                     <div class="five object">
                         <img src="./портфолио/едва е4/плакаты4.jpg">
                     </div>
@@ -44,7 +44,7 @@
                         <img src="./портфолио/едва е4/плакаты3.jpg">
                     </div>
                 </div>
-                <div class="seven-nine">
+                <div class="seven-nine ob">
                     <div class="seven object">
                         <img src="./портфолио/едва е4/открытки.jpg">
                     </div>
@@ -55,7 +55,7 @@
                         <img src="./портфолио/едва е4/откр.jpg">
                     </div>
                 </div>
-                <div class="ten-thirteen">
+                <div class="ten-thirteen ob">
                     <div class="ten object">
                         <img src="./портфолио/едва е4/пины.png">
                     </div>
