--- a/sital.html
+++ b/sital.html
@@ -17,7 +17,7 @@
                 <p>Works</p>
             </a>
             <a class="download">
-                <p><br/><i>Sital</i>, 2023, Download</p>
+                <p><br/><i>Sital</i>, 2023</p>
             </a>
         </div>
         <div class="container">
