--- a/tuesday.html
+++ b/tuesday.html
@@ -18,7 +18,7 @@
                     <p>Works</p>
                 </a>
                 <a class="download">
-                    <p><i>Posters</i></i></p>
+                    <p><br><i>Posters</i></i></p>
                 </a>
             </div>
             <div class="frame">
