--- a/visual-research.html
+++ b/visual-research.html
@@ -18,7 +18,7 @@
                     <p>Works</p>
                 </a>
                 <a class="download">
-                    <p>Визуальное исследование You can sit on it</p>
+                    <p><br><i>You can sit on it</i>, 2023. 21 × 18 сm, 40 pages, ARENA 80 г/м²</p>
                 </a>
             </div>
             <div class="frame">
