--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             </div>
             <div class="posters ob">
                 <a href="./posters.html" class="object">
-                    <img src="./портфолио/гл экран/2.png">
+                    <img src="./портфолио/гл экран/КРУГ.png">
                 </a>
             </div>
             <div class="game-diagrams ob">
