--- a/illustrations.html
+++ b/illustrations.html
@@ -18,7 +18,7 @@
                     <p>Works</p>
                 </a>
                 <a class="download">
-                    <p><br>llustration. Pencils, paints, pens, digital</p>
+                    <p><br>Illustration. Pencils, paints, pens, digital</p>
                 </a>
             </div>
             <div class="frame">
@@ -41,10 +41,10 @@
                     <img src="./портфолио/иллюстрац/photo1705417014-01.jpg">
                 </div>
                 <div class="eight object">
-                    <img src="./портфолио/иллюстрац/русалка.png">
+                    <img src="./портфолио/иллюстрац/собака.png">
                 </div>
                 <div class="seven object">
-                    <img src="./портфолио/иллюстрац/собака.png">
+                    <img src="./портфолио/иллюстрац/русалка.png">
                 </div>
             </div>
         </div>
