--- a/posters.html
+++ b/posters.html
@@ -56,17 +56,21 @@
                     </div>
                 </div>
                 <div class="ten-thirteen ob">
-                    <div class="ten object">
-                        <img src="./портфолио/едва е4/пины.png">
+                    <div class="ob1">
+                        <div class="ten object">
+                            <img src="./портфолио/едва е4/пины.png">
+                        </div>
+                        <div class="eleven object">
+                            <img src="./портфолио/едва е4/пины2.png">
+                        </div>
                     </div>
-                    <div class="eleven object">
-                        <img src="./портфолио/едва е4/пины2.png">
-                    </div>
-                    <div class="twelve object">
-                        <img src="./портфолио/едва е4/пины3.png">
-                    </div>
-                    <div class="thirteen object">
-                        <img src="./портфолио/едва е4/пины4.png">
+                    <div class="ob1">
+                        <div class="twelve object">
+                            <img src="./портфолио/едва е4/пины3.png">
+                        </div>
+                        <div class="thirteen object">
+                            <img src="./портфолио/едва е4/пины4.png">
+                        </div>
                     </div>
                 </div>
             </div>
